test/Fail/Issue1974.err
Issue1974.agda:39.12-27: error: [UnequalTerms]
R₃ A != R₄ of type Set
when checking that the expression refl {x = f₁ a} has type
c a ≡ mkR₃
